After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 743914 - glimagesink: doesn't work on Raspberry Pi with EGLImages
glimagesink: doesn't work on Raspberry Pi with EGLImages
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal blocker
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-02-03 09:24 UTC by Philippe Normand
Modified: 2015-02-28 07:30 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Philippe Normand 2015-02-03 09:24:49 UTC
This works, with video/x-raw RGBA caps: gst-launch-1.0 videotestsrc ! glimagesink

But when the gst-omx video decoder is used and outputs EGLImages the sink only flashes what looks like a corrupted frame and then nothing.
Comment 1 Nicolas Dufresne (ndufresne) 2015-02-03 15:46:52 UTC
Is it a regression form 1.4 ?
Comment 2 Philippe Normand 2015-02-03 15:53:31 UTC
(In reply to comment #1)
> Is it a regression form 1.4 ?

Yes it's a regression from 1.4.5. Sorry I should've mentioned it earlier :)
Comment 3 Nicolas Dufresne (ndufresne) 2015-02-03 16:05:07 UTC
Then it's a  must fix ;-P
Comment 4 Julien Isorce 2015-02-03 22:41:25 UTC
Are you sure it was working with 1.4.4 ? I do not see any suspicious commit between 1.4.4 and 1.4.5 here http://cgit.freedesktop.org/gstreamer/gst-plugins-bad/log/?h=1.4 . There are much more changes between 1.4.3 and 1.4.4.

Once you have a commit point where it works and a commit point where it fails, it would be great if you could run a git bisect. (between steps, run autogen but only build libgstgl and gl plugins to save time).
Comment 5 Tim-Philipp Müller 2015-02-03 22:45:38 UTC
Julien, I think it was a regression between 1.4.5 and git master, not 1.4.4 and 1.4.5 ?
Comment 6 Julien Isorce 2015-02-03 23:18:00 UTC
Ah thx Tim, make sense for me now :)

Philippe was it working from your commit http://cgit.freedesktop.org/gstreamer/gst-plugins-bad/commit/?id=cfc0230e040758e00ea9f7a75c4be99be158c454 ?
Comment 7 Philippe Normand 2015-02-04 07:58:12 UTC
No :( That commit only fixes the build.
Comment 8 Matthew Waters (ystreet00) 2015-02-28 07:30:39 UTC
commit 03b5288f64bdee53590a7eec02550779771bb6c2
Author: Matthew Waters <matthew@centricular.com>
Date:   Sat Feb 28 18:21:33 2015 +1100

    glupload: perform egl upload on the gl thread
    
    Fixes EGLImage usage on raspberry pi
    
    https://bugzilla.gnome.org/show_bug.cgi?id=743914